<resources>
    <string name="app_name">AsilApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="empty_fields_error">Fill in all fields</string>
    <string name="signup_done">Signed up successfully</string>
    <string name="signup_failed">"Signed up failed: "</string>
    <string name="signin_done">Signed in successfully</string>
    <string name="signin_failed">"Signed in failed: "</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="birthdate">Birthdate</string>
    <string name="saved_data">Saved data</string>
    <string name="error">"Error: "</string>
    <string name="asylum_seeker">Asylum seeker</string>
    <string name="doctor">Doctor</string>
    <string name="confirm_password">Confirm password</string>
    <string name="passwords_not_match">Passwords doesn\'t match</string>
    <string name="refugee_shelter">Refugee shelter</string>
    <string name="license_number">License number</string>
    <string name="welcome_to_asilapp">Welcome to AsilApp</string>
    <string name="welcome_message">Welcome %1$s %2$s, \nThank you for registering!
        The password for the biomedical container is: password</string>
    <string name="error_qrcode">Error generating QR Code</string>
    <string name="login_qrcode">Login with\nQR code</string>
    <string name="scan_from_gallery">Scan from Gallery</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="error_decode_qrcode">Failed to decode QR Code</string>
    <string name="camera_permission">Camera permission denied. This feature is not available</string>
    <string name="bluetooth_permission">Bluetooth permission denied. This feature is not available</string>
    <string name="expense_amount">Expense amount</string>
    <string-array name="expenses_category_empty">
        <item />
        <item>Food</item>
        <item>Drugs</item>
        <item>Medical check-up</item>
        <item>Other</item>
    </string-array>
    <string-array name="expenses_category">
        <item>Food</item>
        <item>Drugs</item>
        <item>Medical check-up</item>
        <item>Other</item>
    </string-array>
    <string name="save_expense">Save expense</string>
    <string name="date_expense">Date expense</string>
    <string name="select_category">Select category</string>
    <string name="filter_by_category">Filter by category</string>
    <string name="filter_by_date">Filter by date</string>
    <string name="select_dates">Select dates</string>
    <string name="select_a_date">Select a date</string>
    <string name="total_amount">Total amount: €</string>
    <string name="expanse_saved">Expanse saved</string>
    <string name="expanse_not_saved">Expanse not saved</string>
    <string name="start_measurement">Start measurement</string>
    <string name="temperature_measurement">Body temperature measurement</string>
    <string name="heartbeat_measurement">Heartbeat measurement</string>
    <string name="weight_measurement">Weight measurement</string>
    <string name="blood_glucose_measurement">Blood glucose measurement</string>
    <string name="my_measurement_data">My measurement data:\n</string>
    <string name="temperature">Temperature: </string>
    <string name="heartbeat">Heartbeat: </string>
    <string name="weight">Weight: </string>
    <string name="blood_glucose">Blood glucose: </string>
    <string name="share_data">Share your data</string>
    <string name="generated_by_asilapp">\nGenerated by AsilApp!</string>
    <string name="share">Share</string>
    <string name="bluetooth_not_found">The device does not support Bluetooth</string>
    <string name="bluetooth_not_enabled">Bluetooth not enabled</string>
    <string name="cancel">Cancel</string>
    <string name="deny">Deny</string>
    <string name="allow">Allow</string>
    <string name="no_thanks">No, thanks</string>
    <string name="continue_text">Continue</string>
    <string name="camera_permission_request">Camera permission request</string>
    <string name="camera_permission_description">The app requires access to the camera to scan the qr code. Without this permission, this feature will be disabled.</string>
    <string name="bluetooth_permission_request">Bluetooth permission request</string>
    <string name="bluetooth_permission_description">The app requires Bluetooth access to connect to the biomedical equipment container. Without this permission, some features will be disabled.</string>
    <string name="access_allowed">Access allowed!</string>
    <string name="wrong_password">Wrong password!</string>
    <string name="title_biomedical_container">Enter the password of the biomedical container</string>
    <string name="ok">Ok</string>
    <string name="measurement_saved">Measurement saved</string>
    <string name="measurement_not_saved">Measurement not saved</string>
    <string-array name="measurements_type_empty">
        <item />
        <item>@string/TEMPERATURE</item>
        <item>@string/HEARTBEAT</item>
        <item>@string/WEIGHT</item>
        <item>@string/GLYCEMIA</item>
    </string-array>
    <string name="TEMPERATURE">Temperature</string>
    <string name="HEARTBEAT">Heartbeat</string>
    <string name="WEIGHT">Weight</string>
    <string name="GLYCEMIA">Glycemia</string>
    <string name="disease">Disease</string>
    <string name="therapy">Therapy</string>
    <string name="disease_saved">Disease saved</string>
    <string name="disease_not_saved">Disease not saved</string>
    <string name="medical_parameters">Medical parameters</string>
    <string name="diseases">Diseases</string>
    <string name="nutritional_tips">Nutritional tips</string>
    <string name="prevention_and_lifestyle">Prevention and lifestyle</string>
    <string name="purchase_of_drugs">Purchase of drugs</string>
    <string name="rules">Rules</string>
    <string name="close">Close</string>
    <string name="services">Services</string>
    <string name="location_permission_title">Request location permission</string>
    <string name="location_permission_description">The app requires access to your location to show nearby activities and points of interest. Without this permission, it will not be possible to show your current location. However, it will show activities and points of interest near the shelter where you live.</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="average">Average: %1.1f</string>
    <string name="send">Send</string>

    <string name="asylum_info_title">Information for Asylum Seekers</string>
    <string name="asylum_info_message">
        📂 Essential Documents:\n
        1. Identity Document / Passport\n
        2. Asylum Request Form\n
        3. Temporary Residence Permit\n\n
        ☎️ Useful Contacts:\n
        1. Territorial Commission for Asylum\n
        2. Immigration Office - Police Headquarters\n
        3. Support Associations
    </string>
    <string name="identity_document">Identity Document / Passport</string>
    <string name="asylum_form">Asylum Request Form</string>
    <string name="temporary_residence">Temporary Residence Permit</string>
    <string name="commission_territorial">Territorial Commission for Asylum</string>
    <string name="immigration_office">Immigration Office - Police Headquarters</string>
    <string name="support_associations">Support Associations</string>
    <string name="add">Add</string>
    <string name="asylum_seeker_demo">Asylum seeker\ndemo</string>
    <string name="doctor_demo">Doctor demo</string>
    <string name="add_disease">Add disease</string>
    <string name="add_expense">Add expense</string>
    <string name="expenses_list">Expenses list</string>
    <string name="profile">Profile</string>
    <string name="choose_measurement">Choose measurement</string>
    <string name="dont_ask_again">Don\'t ask again</string>
    <string name="patient_diseases">Patient diseases</string>
    <string name="save_disease">Save disease</string>
    <string name="measure_body_temperature">Measure body temperature</string>
    <string name="map">Map</string>
    <string name="documents_and_contacts">Documents and contacts</string>
    <string name="info">Info</string>
    <string name="nutrition_videos">Nutrition videos</string>
    <string name="reset_email_sent">Reset email sent!</string>
    <string name="leave_a_review">Leave a review</string>
    <string name="review_sent_successfully">Review sent successfully!</string>
    <string name="review_not_sent">Review not sent</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="rate_app_description">Do you like the content of this app? Enter a rating from 1 to 5 stars:</string>
    <string name="take_measurement">Take measurement</string>
    <string name="home">Home</string>
    <string name="take_measurements">Take measurements</string>
    <string name="measure_heart_rate">Measure heart rate</string>
    <string name="measure_body_weight">Measure body weight</string>
    <string name="measure_blood_sugar">Measure blood sugar</string>
    <string name="regulations">Regulations</string>
</resources>