<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/md_theme_surfaceContainer"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_disease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disease"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:textColor="?attr/colorOnBackground" />

            <TextView
                android:id="@+id/therapy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/therapy"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?attr/colorOnBackground" />

            <TextView
                android:id="@+id/item_therapy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?attr/colorOnSurfaceVariant" />

            <TextView
                android:id="@+id/doctor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/doctor"
                android:textAlignment="textEnd"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:textColor="?attr/colorOnBackground" />

            <TextView
                android:id="@+id/item_doctor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?attr/colorOnSurfaceVariant" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>